Update ArtifactDefinition for JRE8.